--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+.results {
+  text-decoration: none;
+  padding: 300px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
