--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  
+}
+.body{
+  background: #f5f5f5
+  ;
 }
 .results {
   text-decoration: none;
@@ -11,6 +16,36 @@
   margin-bottom: 5%;
 
 }
+.grid{
+  /* display: grid;
+ 
+grid-template-columns: repeat(4, 1fr);
+ 
+grid-auto-rows: auto; */
+ 
+/* grid-gap: 1rem; */
+display: flex;
+justify-content: space-evenly;
+align-items: center;
+
+}
+.card1 {
+  background: #f5f5f5;
+  box-shadow: 20px 20px 35px #d0d0d0,
+  -20px -20px 35px #ffff;
+  border-radius: 5px;
+  /* border: 1px solid black; */
+  height: 200px;
+  width: 200px;
+  padding: 20px 20px 20px 20px;
+  display: flex;
+  align-items: center;
+
+  
+}
+/* .card-img{
+  width: 65px;
+} */
 .searchbar{
   margin-bottom: 5%;
 }
