--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,8 @@ align-items: center;
   padding: 20px 20px 20px 20px;
   display: flex;
   align-items: center;
-
+  margin-bottom: 30%;
+  margin-top:5%;
   
 }
 /* .card-img{
@@ -53,10 +54,22 @@ align-items: center;
   text-align: center;
   justify-content: center;
 }
- .profile-photo{
+.banner {
   width: 100%;
   height: 605px;
   background-position: center;
+  background: rgb(255,235,235);
+background: linear-gradient(180deg, rgba(255,235,235,1) 0%, rgba(245,248,255,1) 30%, rgba(252,244,255,1) 49%, rgba(255,238,238,1) 64%, rgba(255,255,255,1) 93%);
+}
+ .profile-photo{
+  position: absolute;
+  top: 1084px;
+  left: 75%;
+  margin: .75rem;
+  height: 350px;
+  width: 350px;
+  
+  
 }
  
 @media only screen and (max-width: 200px) {
