--- a/src/App.css
+++ b/src/App.css
@@ -53,12 +53,16 @@ align-items: center;
 .home-nav{
   text-decoration: none;
   color: white;
-  font-size: larger;
+  font-size: xx-large;
+  position: absolute ;
+  right: 2%;
+  top: 6%;
 }
-.nav {
-  text-align: center;
-  justify-content: center;
+.logo-name{
+  height: 20px;
+  margin-left: 4%;
 }
+
 .banner {
   width: 100%;
   height: 605px;
@@ -89,6 +93,13 @@ background: linear-gradient(180deg, rgba(255,235,235,1) 0%, rgba(245,248,255,1) 
   margin: .75rem;
   height: 350px;
   width: 350px;
+}
+.profile-photo2{
+  position: absolute;
+  top: 25%;
+  left: 42%;
+  margin: .75rem;
+  height: 30%;
 }
  
 @media only screen and (max-width: 200px) {
