--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,48 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+.button {
+  width: max-content;
+  display: inline-block;
+  color: #3c3c3c;
+  font-size: 1rem;
+  padding: 0.5rem 1.3rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid #FE7171;
+  transition: all 0.3s ease-in-out;;
+}
+
+.button:hover {
+  background-color:#FE7171;
+  color: #f5f5f5;
+  border-color: transparent;
+}
+
+.button-primary {
+  background-color: #ff4747;
+  color: #f5f5f5;
+}
+
+.search-input {
+  border-bottom: 1px solid #FE7171;
+  padding-bottom: 0.5rem;
+  margin-right: 1rem;
+}
+
+
 .App {
   text-align: center;
-  
+  height: 100vh;
 }
 .body{
   background: #f5f5f5
@@ -17,17 +59,19 @@
 
 }
 .grid{
-  /* display: grid;
- 
-grid-template-columns: repeat(4, 1fr);
- 
-grid-auto-rows: auto; */
- 
-/* grid-gap: 1rem; */
 display: flex;
 justify-content: space-evenly;
 align-items: center;
-
+}
+.footer1{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #FE7171 ;
+  color: white;
+  text-align: center;
 }
 
 .container-results{
@@ -38,13 +82,11 @@ align-items: center;
   align-items: center;
 }
 
-
 .results-card {
   background: #f5f5f5;
   box-shadow: 20px 20px 35px #d0d0d0,
   -20px -20px 35px #ffff;
   border-radius: 5px;
-  /* border: 1px solid black; */
   height: 50px;
   width: 200px;
   display: flex;
@@ -57,13 +99,6 @@ align-items: center;
   justify-content: center;
   
 }
-
-
-
-
-
-
-
 
 .card1 {
   background: #f5f5f5;
