added watermark to footer

--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,16 @@
   background-color: #ff4747;
   color: #f5f5f5;
 }
+.github{
+  margin-left: 1rem;
+  margin-bottom: -30px;
+}
 
 .search-input {
   border-bottom: 1px solid #FE7171;
   padding-bottom: 0.5rem;
   margin-right: 1rem;
+  margin-top: 1rem;
 }
 
 
