--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 }
 .github{
   margin-left: 1rem;
-  margin-bottom: -30px;
+  padding-top: 1rem;
 }
 
 .search-input {
@@ -77,6 +77,7 @@ align-items: center;
   background-color: #FE7171 ;
   color: white;
   text-align: center;
+  padding-top: 0.5rem;
 }
 
 .container-results{
@@ -178,5 +179,68 @@ background: linear-gradient(180deg, rgba(255,235,235,1) 0%, rgba(245,248,255,1) 
   height: 30%;
 }
  
-@media only screen and (max-width: 200px) {
+/* Tablets */
+@media screen and (max-width: 1024px) {
+  .profile-photo1{
+    visibility: hidden;
+  }
+  .profile-photo2{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    position:inherit;
+    height: 500px;
+
+  }
+  .profile-photo{
+    visibility: hidden;
+  }
+  .grid{
+    display: flex;
+    flex-direction: column;
+  }
+  .card1{
+    margin-bottom: 80px;
+  }
+  .footer-photo{
+    visibility: hidden;
+  }
+}
+
+
+ /* MOBILE */
+@media screen and (max-width: 680px) {
+  .profile-photo1{
+    visibility: hidden;
+  }
+  .profile-photo2{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    position:inherit;
+    height: 200px;
+
+  }
+  .profile-photo{
+    visibility: hidden;
+  }
+  .banner {
+    width: 100%;
+    height: 305px;
+    background-position: center;
+    background: rgb(255,235,235);
+  background: linear-gradient(180deg, rgba(255,235,235,1) 0%, rgba(245,248,255,1) 30%, rgba(252,244,255,1) 49%, rgba(255,238,238,1) 64%, rgba(255,255,255,1) 93%);
+  }
+  .footer-photo{
+    visibility: hidden;
+  }
+  .grid{
+    display: flex;
+    flex-direction: column;
+  }
+  .card1{
+    margin-bottom: 80px;
+  }
 }
